Añade express paginate

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-paginate": "^1.0.2",
     "http-errors": "^2.0.0",
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
